--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@
         
         ${skillsHTML}
 		${experienceHTML}
+		<div style="page-break-before: always;"></div>
         ${projectsHTML}
         ${educationHTML}
         ${achievementsHTML}
