--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
+	<style>
+		@media print { @page { size: A4; margin: 0; /* removes all margins */ }
+	</style>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
