--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         </div>
 
         <!-- Hamburger Menu -->
-        <button id="hamburger-menu" class="md:hidden fixed top-4 left-4 z-[60] p-2 rounded-md bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm" aria-label="Open menu" aria-controls="mobile-sidebar" aria-expanded="false">
+        <button id="hamburger-menu" class="no-pdf md:hidden fixed top-4 left-4 z-[60] p-2 rounded-md bg-white/70 dark:bg-gray-800/70 backdrop-blur-sm" aria-label="Open menu" aria-controls="mobile-sidebar" aria-expanded="false">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
           </svg>
@@ -545,9 +545,10 @@
         <p class="text-lg text-gray-600 dark:text-gray-400 leading-relaxed my-16">${data.settings.summary}</p>
         
         ${skillsHTML}
-		${experienceHTML}
 		<div style="page-break-before: always;"></div>
+		${experienceHTML}
         ${projectsHTML}
+		<div style="page-break-before: always;"></div>
         ${educationHTML}
         ${achievementsHTML}
         ${contactHTML}
