--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
     ${headerHTML}
     <div class="flex flex-col min-h-screen">
       <div class="fixed top-4 right-4 z-50">
-          <button id="theme-toggle" class="p-2 rounded-full bg-gray-200 dark:bg-gray-800 text-gray-900 dark:text-white"></button>
+          <button id="theme-toggle" class="no-pdf p-2 rounded-full bg-gray-200 dark:bg-gray-800 text-gray-900 dark:text-white"></button>
       </div>
       <main class="flex-grow max-w-4xl mx-auto px-6 pt-40 pb-8 animate-blur-in">
         <header class="grid md:grid-cols-3 gap-12 items-center mb-16">
